--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -17,7 +17,7 @@
 %\draftQfalse
 %--------------
 %###################################
-\def\TITLE{\LARGE Learning  Mutational Patterns For Fast Scalable Risk Estimation of Emerging Influenza Strains}
+\def\TITLE{\LARGE \enet For Fast Scalable Pandemic Risk Estimation of Emerging Influenza Strains}
 %\def\TITLE{\LARGE A Biologically Meaningful Sequence Metric\\For Analyzing Evolutionary Changes\\In Novel Pathogens}
 %\def\TITLE{Learning  Mutational Patterns At Scale For\\Analysis Of Sequence Divergence\\In Novel Pathogens}
 %\def\TITLE{Learning Mutational Patterns at Scale to Analyze Sequence Divergence in Novel Pathogens}
@@ -58,5 +58,6 @@ $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uc
 \def\RATG13{RaTG13\xspace}
 \def\Appendix{Appendix}
 \def\qnet{Qnet\xspace}
+\def\enet{Emergenet\xspace}
 \def\cov{COVID-19\xspace}
 \def\infl{Influenza A\xspace}
