--- a/tex/Figures/fig0brief.tex
+++ b/tex/Figures/fig0brief.tex
@@ -75,7 +75,7 @@
 
 
  \node[anchor=north west] (A1) at ([xshift=-3in,yshift=1.6in]N1.north east) {
-\includegraphics[width=6.0in]{Figures/emergenetscheme}
+\includegraphics[width=6.0in]{Figures/e2}
  };
   
 \end{tikzpicture}
